2005-03-07  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Add oh.h to pixbuf_SOURCES.

2005-02-22  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
        move AC_CONFIG_AUX_DIR above AM_INIT_AUTOMAKE

2005-02-22  mallum,,,  <mallum@openedhand.com>

	* libmb/mbtray.c: (get_xevent_timed):
	Make timeouts work more correctly. Fixes bug with large timeouts
	never getting called like with the clock applet.

2005-01-24  1.6 Released

2005-01-24  mallum,,,  <mallum@openedhand.com>

	* libmb/Makefile.am:
	* libmb/mbexp.c:
	Bump up soname. add a comment to mbexp.c

2005-01-11  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	Bump up version
	* libmb/mbmenu.c: (mb_menu_new):
	Change default font, avoiding fixed
	* libmb/mbpixbuf.c: (_paletteAlloc), (mb_pixbuf_get_pixel):
	* libmb/mbpixbuf.h:
	Add new x_pixel call

2005-01-10  Ross Burton  <ross@burtonini.com>

	* libmb/mbdotdesktop.c:
	Fix an infinite loop in mb_dotdesktop_folders_free.

2005-01-07  Ross Burton  <ross@burtonini.com>

	* libmb/mbpixbuf.c:
	Revert the _composite change, there are semantic differences.

2005-01-07  Ross Burton  <ross@burtonini.com>

	* libmb/mbexp.c:
	Fix a compile error.

2005-01-07  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	* libmb/mbpixbuf.c:
	Endianess handling for 16bpp internal.

2005-01-07  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Put all CFLAGS definitions in here.

	* tests/dot-desktop.c:
	Remove suite_free call, recent check's do that for us.

	* tests/pixbuf.c:
	Add more tests, and run twice for 16bpp and 32bpp.

	* tests/gcov.sh:
	Script to run the tests and prepare a gcov coverage report.

2005-01-07  Ross Burton  <ross@burtonini.com>

	* libmb/mbpixbuf.c:
	Use _img_copy_composite() in _img_composite() instead of doing the
	same code twice.

2005-01-04  mallum,,,  <mallum@openedhand.com>

	* libmb/mbpixbuf.c: (mb_pixbuf_img_get_pixel):
	* libmb/mbtray.c: (_set_icon_hint):
	Fix odditiy in set icons being yellow.
